--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-	"ip":"titgaming.aternos.me:11515",
+	"ip":"titgaming.aternos.me",
 	"port": "11515",
 	"name": "afkbot1",
 	"auto-night-skip":"true"
